# NetworksLab2018

./: .gitignore  README.md  report.tex
client/: CMakeLists.txt  main.cpp
httpserver/src/: HttpServer.java
individual_task/: README.md  client_log.txt  data.sql
individual_task/client/: CMakeLists.txt  Client.cpp  Client.h  client.c  client.cpp  client.sln  common.h  includes.h  main.c  main.cpp  socketFunctions.c  socketFunctions.h
individual_task/client/clienTCPind/: CMakeLists.txt  main.c
individual_task/client/client/: client.vcxproj  client.vcxproj.filters  main.cpp
individual_task/client/clientUDPind/: CMakeLists.txt  main.c
individual_task/client/sockets/: close_socket.c  connect_to.c  get_response.c  parse_request.c  read_from.c  send_request.c  sockets.h
individual_task/client_linux/: CMakeLists.txt  main.c
individual_task/client_linux/data/: pack_data.c
individual_task/client_linux/sockets/: close_socket.c  connect_socket.c  parse_request.c  read_socket.c  response.c  send_request.c  socket.h
individual_task/client_linux_UDP/: main.c
individual_task/common/: Attribute.h  AttributeHelper.cpp  AttributeHelper.h  LinkedList.h  ObjectClass.cpp  ObjectClass.h  ObjectClassAttributesFactory.cpp  ObjectClassAttributesFactory.h  ObjectClassType.h  ObjectClassTypeHelper.cpp  SafeSocket.cpp  SafeSocket.h  ScopeLock.h
individual_task/server/: CMakeLists.txt  Client.cpp  Client.h  DB.cpp  DB.h  Server.cpp  Server.h  TableString.cpp  TableString.h  common.h  ldap.sln  main.c  main.cpp  server.c  server.cpp  server.h
individual_task/server/files/: authentication.c  check_account.c  create_account.c  create_session.c  delete_account.c  delete_client_data.c  delete_client_token.c  delete_session.c  files.h  generate_token.c  get_account_cash.c  get_account_data.c  get_login.c  get_money.c  get_session_client.c  init_data_folders.c  list_all.c  list_all_accounts.c  list_all_sessions.c  login_client.c  put_account_cash.c  read_from_file.c  register_client.c  withdraw_account_cash.c  write_to_file.c
individual_task/server/files2/: files.h
individual_task/server/ldap/: Attribute.h  AttributeHelper.cpp  AttributeHelper.h  DirectoryTreeStore.cpp  DirectoryTreeStore.h  DirectoryUtil.cpp  DirectoryUtil.h  FileUtil.cpp  FileUtil.h  LinkedList.h  ObjectClass.cpp  ObjectClass.h  ObjectClassTypeHelper.h  ScopeLock.cpp  Server.cpp  Server.h  Store.h  ThreadSafeLinkedList.h  ThreadSafeStoreWrapper.cpp  ThreadSafeStoreWrapper.h  directory_utils.cpp  ldap.vcxproj  ldap.vcxproj.filters  main.cpp  resource.h
individual_task/server/ldap/store/p1/p2/p3/p4/: asd.txt
individual_task/server/logging/: internal_log.c  internal_log_formatted.c  log_close.c  log_init.c  logging.c  logging.h
individual_task/server/res/: logins  repositories
individual_task/server/serverTCPind/: CMakeLists.txt  main.c
individual_task/server/serverUDPind/: main.c
individual_task/server/sockets/: close_socket.c  create_listen_socket.c  get_request.c  read_from.c  send_response.c  sockets.h
individual_task/server/src/: includes.h  main.c  structures.h
individual_task/server/src/client_actions/: commonActions.c  commonActions.h  developerActions.c  developerActions.h  testerActions.c  testerActions.h
individual_task/server/src/file_manager/: fileManager.c  fileManager.h
individual_task/server/src/menu_listener/: optionsMenuListener.c  optionsMenuListener.h
individual_task/server/src/server_actions/: serverActions.c  serverActions.h  serverThreads.c  serverThreads.h
individual_task/server/src/socket_functions/: socketFunctions.c  socketFunctions.h
individual_task/server_linux/: CMakeLists.txt  main.c  server_data.txt
individual_task/server_linux/sockets/: get_request.c  listen_socket.c  read_socket.c  response_request.c  socket.h
individual_task/server_linux/users_and_data/: calculate_data.c  check_range.c  check_user.c  clear_data.c  create_session.c  find_maxprime.c  get_list_of_primes.c  get_session_client.c  pack_data.c  read_file.c  retrieve_data.c  work.h  write_file.c
individual_task/server_linux_UDP/: CMakeLists.txt  main.c  server_data.txt
individual_task/utils/: SocketBase.cpp  SocketBase.h  includes.h
individual_task2/HttpProtocol/: build.gradle  settings.gradle
individual_task_udp/Mail_udp_client/: CMakeLists.txt  main.cpp
individual_task_udp/Mail_udp_server/: CMakeLists.txt  common.h  mail.h  main.cpp
report/: report.tex  titlepage.tex
second_task/: Package.swift  README.md  build.gradle  run  settings.gradle
second_task/source/: Package.resolved  Package.swift
server/: server.sln
server/server/: Source.c
simple_tcp/: comment.txt  test_messages.txt
simple_tcp/client_linux/: CMakeLists.txt  client  client_linux  clientv3  main.c  main.c.save
simple_tcp/client_windows/: CMakeLists.txt  Source.c  client_windows.sln  main.c  main.cpp
simple_tcp/server_linux/: .server_linux  main.c  (+3 more)
simple_udp/: comment.txt
testC/: testC.sln
(+138 files in other folders)
